# bedrockpy-zero

./: .gitattributes  .gitignore  LICENSE.txt  README.rst  pyproject.toml
bedrock/: _cli.py  command_parsers.py  commands.py  context.py  debug_interface.py  server.py  ui.py  utils.py
build_docs/: conf.py  searchindex.js
docs/: .buildinfo  404.html  api.html  boilerplate-code.html  commands.html  genindex.html  minecraft-references.html  objects.inv  quickstart.html  search.html  searchindex.js
docsrc/: Makefile  api.rst  conf.py  objects.inv  quickstart.rst
log/: 2022-07-10_01-50-36.log.yaml  2022-07-10_01-53-22.log.yaml  2022-07-10_01-57-13.log.yaml  2022-07-10_01-59-37.log.yaml  2022-07-10_01-59-39.log.yaml  2022-07-10_01-59-40.log.yaml  2022-07-10_15-57-57.log.yaml  2022-07-10_16-00-55.log.yaml  2022-07-10_16-03-05.log.yaml  2022-07-10_16-03-13.log.yaml  2022-07-10_16-03-14.log.yaml  2022-07-10_16-09-03.log.yaml  2022-07-10_16-09-05.log.yaml  2022-07-10_16-09-06.log.yaml  2022-07-10_16-09-08.log.yaml  2022-07-10_16-09-09.log.yaml  2022-07-10_16-16-19.log.yaml  2022-07-10_16-16-20.log.yaml  2022-07-10_16-19-47.log.yaml  2022-07-10_16-19-48.log.yaml  2022-07-10_16-19-52.log.yaml  2022-07-10_16-19-54.log.yaml  2022-07-10_16-19-55.log.yaml  2022-07-10_16-21-54.log.yaml  2022-07-10_16-21-56.log.yaml  2022-07-10_16-22-45.log.yaml  2022-07-10_16-22-47.log.yaml  2022-07-10_16-22-53.log.yaml  2022-07-10_16-25-17.log.yaml  2022-07-10_16-26-53.log.yaml  2022-07-10_16-29-46.log.yaml  2022-07-10_16-29-47.log.yaml  2022-07-10_16-29-48.log.yaml  2022-07-10_16-29-51.log.yaml  (+126 more)
(+78 files in other folders)
